appstore-legacy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appstore-legacy
  name: appstore-legacy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appstore-legacy
  template:
    metadata:
      labels:
        app: appstore-legacy
    spec:
      containers:
        - image: gcr.io/pebble-rebirth/appstore-legacy:v0.1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          name: appstore-legacy
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 10m
              memory: 15Mi
---
apiVersion: v1
kind: Service
metadata:
  name: appstore-legacy
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: appstore-legacy
  type: NodePort
