asr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asr
  labels:
    app: asr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: asr
  template:
    metadata:
      labels:
        app: asr
    spec:
      containers:
        - name: asr
          image: gcr.io/pebble-rebirth/asr:g37302eb
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: asr
spec:
  selector:
    app: asr
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
