cohorts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cohorts
  labels:
    app: cohorts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cohorts
  template:
    metadata:
      labels:
        app: cohorts
    spec:
      containers:
        - name: cohorts
          image: gcr.io/pebble-rebirth/cohorts@sha256:05f505d66b761aa2e3806ccf0a9f7359a62290cd685ed484679b997a5ff40178
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: cohorts
spec:
  selector:
    app: cohorts
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
