dev-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-portal
  labels:
    app: dev-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-portal
  template:
    metadata:
      labels:
        app: dev-portal
    spec:
      containers:
        - name: dev-portal
          image: gcr.io/pebble-rebirth/dev-portal:g2e3872c
          ports:
            - containerPort: 8082
          resources:
            limits:
              cpu: 200m
              memory: 224Mi
            requests:
              cpu: 100m
              memory: 192Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: dev-portal
spec:
  selector:
    app: dev-portal
  type: NodePort
  ports:
    - protocol: TCP
      port: 8082
