lp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lp
  labels:
    app: lp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lp
  template:
    metadata:
      labels:
        app: lp
    spec:
      containers:
        - name: lp
          image: gcr.io/pebble-rebirth/lp:g8ec31dc
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 30m
              memory: 128Mi
            requests:
              cpu: 15m
              memory: 96Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: lp
spec:
  selector:
    app: lp
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
