treasure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treasure
  labels:
    app: treasure
spec:
  replicas: 2
  selector:
    matchLabels:
      app: treasure
  template:
    metadata:
      labels:
        app: treasure
    spec:
      containers:
        - name: treasure
          image: gcr.io/pebble-rebirth/treasure:g40b6880
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: treasure
spec:
  selector:
    app: treasure
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
