weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  labels:
    app: weather
spec:
  replicas: 4
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: gcr.io/pebble-rebirth/weather:g00433bc
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  selector:
    app: weather
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
