ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - secretName: star-rebble-io
      hosts:
        - "*.rebble.io"
  rules:
    - host: "android-appstore-api.rebble.io"
      http:
        paths:
          - path: /
            backend:
              serviceName: appstore-api
              servicePort: 8080
    - host: "appstore-api.rebble.io"
      http:
        paths:
          - path: /
            backend:
              serviceName: appstore-api
              servicePort: 8080
